objects/Receipt_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Summe</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Old__c</fullName>
        <label>ID_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Methode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Zahlung_ID__c</fullName>
        <label>Old Zahlung ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Receipt__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <label>Beleg</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipName>Receipt_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Receipt__r.Claim__r.Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaktion</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>Receipt_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZahlungImpID__c</fullName>
        <externalId>true</externalId>
        <label>ZahlungImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zahlung</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zahlung</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>